# EducationApp

./: DB_schema.xml  pyproject.toml
src/EducationApp/EducationApp/: asgi.py  settings.py  urls.py  wsgi.py
src/EducationApp/core/: admin.py  apps.py  common.py  signals.py
src/EducationApp/core/api_v1/: urls.py
src/EducationApp/core/api_v1/serializers/: __init__.py  group.py  lesson.py  product.py  user.py
src/EducationApp/core/api_v1/views/: __init__.py  lesson.py  product.py
src/EducationApp/core/migrations/: 0001_initial.py
src/EducationApp/core/models/: __init__.py  available_product.py  group.py  group_member.py  lesson.py  product.py
